network.tf
#----------------------------------------------------------
# Provision:
#  - VPC
#  - Internet Gateway
#  - XX Public Subnets
#  - XX Private Subnets
#  - XX NAT Gateways in Public Subnets to give access to Internet from Private Subnets
#
# Made by Anton Pushkarev
#----------------------------------------------------------

#==============================================================

data "aws_availability_zones" "available" {}
 

resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr
  tags = {
    Name = "${var.projectname}-vpc-${var.env}"
    Owner = "${var.owner}"
    Environment = "${var.env}"
  }
}

resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name = "${var.projectname}-igw-${var.env}"
    Owner = "${var.owner}"
    Environment = "${var.env}"
    
  }
}

#-------------Public Subnets and Routing----------------------------------------
resource "aws_subnet" "public_subnets" {
  count                   = length(var.public_subnet_cidrs)
  vpc_id                  = aws_vpc.main.id
  cidr_block              = element(var.public_subnet_cidrs, count.index)
  availability_zone       = data.aws_availability_zones.available.names[count.index]
  map_public_ip_on_launch = true
  tags = {
    Name = "${var.projectname}-publicSubnet-${count.index + 1}"
    Owner = "${var.owner}"
    Environment = "${var.env}"
  }
}


resource "aws_route_table" "public_subnets" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }
  tags = {
    Name = "${var.projectname}-routeTable-publicSubnets"
    Owner = "${var.owner}"
    Environment = "${var.env}"
  }
}

resource "aws_route_table_association" "public_routes" {
  count          = length(aws_subnet.public_subnets[*].id)
  route_table_id = aws_route_table.public_subnets.id
  subnet_id      = element(aws_subnet.public_subnets[*].id, count.index)
}


#-----NAT Gateways with Elastic IPs- and EIP for bastion-------------------------

resource "aws_eip" "eip" {
  count = length(var.private_subnet_cidrs)
  vpc   = true
  tags = {
    Name = "${var.projectname}-eip-${count.index + 1}"
    Owner = "${var.owner}"
    Environment = "${var.env}"
  }
}

resource "aws_nat_gateway" "nat" {
  count         = length(var.private_subnet_cidrs)
  allocation_id = aws_eip.eip[count.index].id
  subnet_id     = element(aws_subnet.public_subnets[*].id, count.index)
  tags = {
    Name = "${var.projectname}-nat-gw-${count.index + 1}"
    Owner = "${var.owner}"
    Environment = "${var.env}"
  }
}

resource "aws_eip" "bastion" {
  vpc = true
  tags = {
    Name = "${var.projectname}-EIP-Bastion"
    Owner = "${var.owner}"
    Environment = "${var.env}"
  } 
}
#--------------Private Subnets and Routing-------------------------
resource "aws_subnet" "private_subnets" {
  count             = length(var.private_subnet_cidrs)
  vpc_id            = aws_vpc.main.id
  cidr_block        = element(var.private_subnet_cidrs, count.index)
  availability_zone = data.aws_availability_zones.available.names[count.index+1]
  ##availability_zone = local.AZ_temp[count.index]
  tags = {
    Name = "${var.projectname}-APP-privateSubnet-${count.index + 1}"
    Owner = "${var.owner}"
    Environment = "${var.env}"
  }
}


resource "aws_route_table" "private_subnets" {
  count  = length(var.private_subnet_cidrs)
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_nat_gateway.nat[count.index].id
  }
  tags = {
    Name = "${var.projectname}-routeTable-privateSubnet-${count.index + 1}"
    Owner = "${var.owner}"
    Environment = "${var.env}"
  }
}

resource "aws_route_table_association" "private_routes" {
  count          = length(aws_subnet.private_subnets[*].id)
  route_table_id = aws_route_table.private_subnets[count.index].id
  subnet_id      = element(aws_subnet.private_subnets[*].id, count.index)
}
